[tool.poetry]
name = "not store"
version = "0.1.0"
description = ""
authors = ["Wasil P <it.dzemidok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
